trabajo con metadata
se trabaja con el eda de metadata y se pulen detalles con el eda de los estados

--- a/Sprint 1 Propuesta de Trabajo/EDA Google/EDA_NewYork.ipynb
+++ b/Sprint 1 Propuesta de Trabajo/EDA Google/EDA_NewYork.ipynb
@@ -84,12 +84,11 @@
     "for archivo in archivos:\n",
     "    # Verificar si el archivo tiene la extensión .json\n",
     "    if archivo.endswith('.json'):\n",
-    "        # Imprimir un mensaje indicando que se está cargando el archivo actual\n",
-    "        print('Cargando data ', archivo, '...')\n",
     "        # Leer el archivo JSON y cargarlo en un DataFrame\n",
     "        data = pd.read_json(archivo, lines=True)\n",
     "        # Concatenar los datos del archivo al DataFrame principal\n",
-    "        df_New_York = pd.concat([df_New_York, data], axis=0)"
+    "        df_New_York = pd.concat([df_New_York, data], axis=0)\n",
+    "print(\"finalizo cargan de datos\")"
    ]
   },
   {
