--- a/Sprint 1 Propuesta de Trabajo/EDA Google/EDA_california.ipynb
+++ b/Sprint 1 Propuesta de Trabajo/EDA Google/EDA_california.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# California \n",
-    "California, estado occidental de EE.UU. Tercer estado con mas visita de turistas internacionales."
+    "# California \n"
    ]
   },
   {
@@ -17,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importamos galerias\n",
+    "# Importamos librerias\n",
     "import pandas as pd \n",
     "import datetime\n",
     "import matplotlib.pyplot as plt \n",
@@ -31,33 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[WinError 2] El sistema no puede encontrar el archivo especificado: '.\\\\california_data'\n",
       "c:\\Users\\sebas\\OneDrive\\Escritorio\\Proyecto-Grupal-Google-yelp\\Sprint 1 Propuesta de Trabajo\\EDA Google\\california_data\n",
-      "Cargando data  1.json ...\n",
-      "Cargando data  10.json ...\n",
-      "Cargando data  11.json ...\n",
-      "Cargando data  12.json ...\n",
-      "Cargando data  13.json ...\n",
-      "Cargando data  14.json ...\n",
-      "Cargando data  15.json ...\n",
-      "Cargando data  16.json ...\n",
-      "Cargando data  17.json ...\n",
-      "Cargando data  18.json ...\n",
-      "Cargando data  2.json ...\n",
-      "Cargando data  3.json ...\n",
-      "Cargando data  4.json ...\n",
-      "Cargando data  5.json ...\n",
-      "Cargando data  6.json ...\n",
-      "Cargando data  7.json ...\n",
-      "Cargando data  8.json ...\n",
-      "Cargando data  9.json ...\n"
+      "finalizo cargan de datos\n"
      ]
     }
    ],
@@ -75,17 +56,16 @@
     "for archivo in archivos:\n",
     "    # Verificar si el archivo tiene la extensión .json\n",
     "    if archivo.endswith('.json'):\n",
-    "        # Imprimir un mensaje indicando que se está cargando el archivo actual\n",
-    "        print('Cargando data ', archivo, '...')\n",
     "        # Leer el archivo JSON y cargarlo en un DataFrame\n",
     "        data = pd.read_json(archivo, lines=True)\n",
     "        # Concatenar los datos del archivo al DataFrame principal\n",
-    "        df = pd.concat([df, data], axis=0)"
+    "        df = pd.concat([df, data], axis=0)\n",
+    "print(\"finalizo cargan de datos\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -142,156 +122,62 @@
        "      <td>None</td>\n",
        "      <td>0x80c2c778e3b73d33:0xbdc58662a4a97d49</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.126404e+20</td>\n",
-       "      <td>David Han</td>\n",
-       "      <td>1583643882296</td>\n",
-       "      <td>4</td>\n",
-       "      <td>They make Korean traditional food very properly.</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0x80c2c778e3b73d33:0xbdc58662a4a97d49</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.174403e+20</td>\n",
-       "      <td>Anthony Kim</td>\n",
-       "      <td>1551938216355</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Short ribs are very delicious.</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0x80c2c778e3b73d33:0xbdc58662a4a97d49</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.005808e+20</td>\n",
-       "      <td>Mario Marzouk</td>\n",
-       "      <td>1494910901933</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Great food and prices the portions are large</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0x80c2c778e3b73d33:0xbdc58662a4a97d49</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1.001857e+20</td>\n",
-       "      <td>Ana Salazar</td>\n",
-       "      <td>1547799582640</td>\n",
-       "      <td>5</td>\n",
-       "      <td>This food is delicious 😁</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0x80c2c778e3b73d33:0xbdc58662a4a97d49</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        user_id           name           time  rating  \\\n",
-       "0  1.089912e+20        Song Ro  1609909927056       5   \n",
-       "1  1.112903e+20    Rafa Robles  1612849648663       5   \n",
-       "2  1.126404e+20      David Han  1583643882296       4   \n",
-       "3  1.174403e+20    Anthony Kim  1551938216355       5   \n",
-       "4  1.005808e+20  Mario Marzouk  1494910901933       5   \n",
-       "5  1.001857e+20    Ana Salazar  1547799582640       5   \n",
+       "        user_id         name           time  rating  \\\n",
+       "0  1.089912e+20      Song Ro  1609909927056       5   \n",
+       "1  1.112903e+20  Rafa Robles  1612849648663       5   \n",
        "\n",
-       "                                               text  pics  resp  \\\n",
-       "0                      Love there korean rice cake.  None  None   \n",
-       "1                                    Good very good  None  None   \n",
-       "2  They make Korean traditional food very properly.  None  None   \n",
-       "3                    Short ribs are very delicious.  None  None   \n",
-       "4      Great food and prices the portions are large  None  None   \n",
-       "5                          This food is delicious 😁  None  None   \n",
+       "                           text  pics  resp  \\\n",
+       "0  Love there korean rice cake.  None  None   \n",
+       "1                Good very good  None  None   \n",
        "\n",
        "                                 gmap_id  \n",
        "0  0x80c2c778e3b73d33:0xbdc58662a4a97d49  \n",
-       "1  0x80c2c778e3b73d33:0xbdc58662a4a97d49  \n",
-       "2  0x80c2c778e3b73d33:0xbdc58662a4a97d49  \n",
-       "3  0x80c2c778e3b73d33:0xbdc58662a4a97d49  \n",
-       "4  0x80c2c778e3b73d33:0xbdc58662a4a97d49  \n",
-       "5  0x80c2c778e3b73d33:0xbdc58662a4a97d49  "
+       "1  0x80c2c778e3b73d33:0xbdc58662a4a97d49  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Visualizamos el data frame \n",
-    "df.head(6)"
+    "# Visualizamos el dataframe \n",
+    "df.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "user_id    float64\n",
-       "name        object\n",
-       "time         int64\n",
-       "rating       int64\n",
-       "text        object\n",
-       "pics        object\n",
-       "resp        object\n",
-       "gmap_id     object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Verificamos el tipo de dato en las columnas \n",
-    "df.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Elimino la columna pics \n",
-    "df=df.drop(['pics',],axis=1)"
+    "#Eliminamos columnas irrelevantes\n",
+    "df=df.drop(['pics',],axis=1)\n",
+    "df=df.drop(['resp',],axis=1)\n",
+    "\t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\alejo\\AppData\\Local\\Temp\\ipykernel_12244\\1771320214.py:5: DeprecationWarning: datetime.datetime.utcfromtimestamp() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.fromtimestamp(timestamp, datetime.UTC).\n",
-      "  times.append(datetime.datetime.utcfromtimestamp(data).strftime('%d/%m/%y %H:%M:%S'))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Normalizacion de la columna time\n",
     "# Normalizamos la columna time creando la columna time_normalizado con la fecha en el formato %d/%m/%y %H:%M:%S \n",
     "times = [] \n",
     "for data in df['time']/1000 :\n",
     "    times.append(datetime.datetime.utcfromtimestamp(data).strftime('%d/%m/%y %H:%M:%S'))\n",
-    "df['time_normalizado']=times\n",
-    " \n"
+    "df['time_normalizado']=times\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -317,10 +203,8 @@
        "      <th></th>\n",
        "      <th>user_id</th>\n",
        "      <th>name</th>\n",
-       "      <th>time</th>\n",
        "      <th>rating</th>\n",
        "      <th>text</th>\n",
-       "      <th>resp</th>\n",
        "      <th>gmap_id</th>\n",
        "      <th>time_normalizado</th>\n",
        "    </tr>\n",
@@ -330,10 +214,8 @@
        "      <th>0</th>\n",
        "      <td>1.089912e+20</td>\n",
        "      <td>Song Ro</td>\n",
-       "      <td>1609909927056</td>\n",
        "      <td>5</td>\n",
        "      <td>Love there korean rice cake.</td>\n",
-       "      <td>None</td>\n",
        "      <td>0x80c2c778e3b73d33:0xbdc58662a4a97d49</td>\n",
        "      <td>06/01/21 05:12:07</td>\n",
        "    </tr>\n",
@@ -341,86 +223,39 @@
        "      <th>1</th>\n",
        "      <td>1.112903e+20</td>\n",
        "      <td>Rafa Robles</td>\n",
-       "      <td>1612849648663</td>\n",
        "      <td>5</td>\n",
        "      <td>Good very good</td>\n",
-       "      <td>None</td>\n",
        "      <td>0x80c2c778e3b73d33:0xbdc58662a4a97d49</td>\n",
        "      <td>09/02/21 05:47:28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.126404e+20</td>\n",
-       "      <td>David Han</td>\n",
-       "      <td>1583643882296</td>\n",
-       "      <td>4</td>\n",
-       "      <td>They make Korean traditional food very properly.</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0x80c2c778e3b73d33:0xbdc58662a4a97d49</td>\n",
-       "      <td>08/03/20 05:04:42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.174403e+20</td>\n",
-       "      <td>Anthony Kim</td>\n",
-       "      <td>1551938216355</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Short ribs are very delicious.</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0x80c2c778e3b73d33:0xbdc58662a4a97d49</td>\n",
-       "      <td>07/03/19 05:56:56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.005808e+20</td>\n",
-       "      <td>Mario Marzouk</td>\n",
-       "      <td>1494910901933</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Great food and prices the portions are large</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0x80c2c778e3b73d33:0xbdc58662a4a97d49</td>\n",
-       "      <td>16/05/17 05:01:41</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        user_id           name           time  rating  \\\n",
-       "0  1.089912e+20        Song Ro  1609909927056       5   \n",
-       "1  1.112903e+20    Rafa Robles  1612849648663       5   \n",
-       "2  1.126404e+20      David Han  1583643882296       4   \n",
-       "3  1.174403e+20    Anthony Kim  1551938216355       5   \n",
-       "4  1.005808e+20  Mario Marzouk  1494910901933       5   \n",
-       "\n",
-       "                                               text  resp  \\\n",
-       "0                      Love there korean rice cake.  None   \n",
-       "1                                    Good very good  None   \n",
-       "2  They make Korean traditional food very properly.  None   \n",
-       "3                    Short ribs are very delicious.  None   \n",
-       "4      Great food and prices the portions are large  None   \n",
+       "        user_id         name  rating                          text  \\\n",
+       "0  1.089912e+20      Song Ro       5  Love there korean rice cake.   \n",
+       "1  1.112903e+20  Rafa Robles       5                Good very good   \n",
        "\n",
        "                                 gmap_id   time_normalizado  \n",
        "0  0x80c2c778e3b73d33:0xbdc58662a4a97d49  06/01/21 05:12:07  \n",
-       "1  0x80c2c778e3b73d33:0xbdc58662a4a97d49  09/02/21 05:47:28  \n",
-       "2  0x80c2c778e3b73d33:0xbdc58662a4a97d49  08/03/20 05:04:42  \n",
-       "3  0x80c2c778e3b73d33:0xbdc58662a4a97d49  07/03/19 05:56:56  \n",
-       "4  0x80c2c778e3b73d33:0xbdc58662a4a97d49  16/05/17 05:01:41  "
+       "1  0x80c2c778e3b73d33:0xbdc58662a4a97d49  09/02/21 05:47:28  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Verificamos la creacion de la nueva columna\n",
-    "df.head(5)"
+    "# Eliminamos time y verificamos la creacion de la nueva columna\n",
+    "df=df.drop(['time',],axis=1)\n",
+    "df.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -428,35 +263,33 @@
       "text/plain": [
        "user_id             float64\n",
        "name                 object\n",
-       "time                  int64\n",
        "rating                int64\n",
        "text                 object\n",
-       "resp                 object\n",
        "gmap_id              object\n",
        "time_normalizado     object\n",
        "dtype: object"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Verificamos el tipo de dato de las columnas \n",
+    "# Verificamos el tipo de dato en las columnas \n",
     "df.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\alejo\\AppData\\Local\\Temp\\ipykernel_12244\\1674010171.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "C:\\Users\\sebas\\AppData\\Local\\Temp\\ipykernel_37364\\1674010171.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  df['time_normalizado'] = pd.to_datetime(df['time_normalizado'])\n"
      ]
     }
@@ -468,104 +301,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "user_id                    float64\n",
-       "name                        object\n",
-       "time                         int64\n",
-       "rating                       int64\n",
-       "text                        object\n",
-       "resp                        object\n",
-       "gmap_id                     object\n",
-       "time_normalizado    datetime64[ns]\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Verificamos el cambio \n",
-    "df.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Creanos un nuevo df con los datos limpios\n",
-    "df_clean = df\n"
+    "# instancioamos el dataframe limpio\n",
+    "df_clean = df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "user_id                    float64\n",
-       "name                        object\n",
-       "time                         int64\n",
-       "rating                       int64\n",
-       "text                        object\n",
-       "resp                        object\n",
-       "gmap_id                     object\n",
-       "time_normalizado    datetime64[ns]\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_clean.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_clean['time_normalizado'] = pd.to_datetime(df_clean['time_normalizado'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2700000, 8)"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Vemos el tamaño del data frame \n",
-    "df_clean.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
