retoques eda metadata

--- a/Sprint 1 Propuesta de Trabajo/EDA Google/EDA_Florida.ipynb
+++ b/Sprint 1 Propuesta de Trabajo/EDA Google/EDA_Florida.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,26 +24,7 @@
      "output_type": "stream",
      "text": [
       "c:\\Users\\sebas\\OneDrive\\Escritorio\\Proyecto-Grupal-Google-yelp\\Sprint 1 Propuesta de Trabajo\\EDA Google\\florida_data\n",
-      "Cargando data  1.json ...\n",
-      "Cargando data  10(1).json ...\n",
-      "Cargando data  10.json ...\n",
-      "Cargando data  11.json ...\n",
-      "Cargando data  12.json ...\n",
-      "Cargando data  13.json ...\n",
-      "Cargando data  14.json ...\n",
-      "Cargando data  15.json ...\n",
-      "Cargando data  16.json ...\n",
-      "Cargando data  17.json ...\n",
-      "Cargando data  18.json ...\n",
-      "Cargando data  19.json ...\n",
-      "Cargando data  2.json ...\n",
-      "Cargando data  3.json ...\n",
-      "Cargando data  4.json ...\n",
-      "Cargando data  5.json ...\n",
-      "Cargando data  6.json ...\n",
-      "Cargando data  7.json ...\n",
-      "Cargando data  8.json ...\n",
-      "Cargando data  9.json ...\n"
+      "finalizo cargan de datos\n"
      ]
     }
    ],
