--- a/Sprint 1 Propuesta de Trabajo/EDA Google/EDA_NewYork.ipynb
+++ b/Sprint 1 Propuesta de Trabajo/EDA Google/EDA_NewYork.ipynb
@@ -49,24 +49,7 @@
      "output_type": "stream",
      "text": [
       "c:\\Users\\sebas\\OneDrive\\Escritorio\\Proyecto-Grupal-Google-yelp\\Sprint 1 Propuesta de Trabajo\\EDA Google\\new_york_data\n",
-      "Cargando data  1.json ...\n",
-      "Cargando data  10.json ...\n",
-      "Cargando data  11.json ...\n",
-      "Cargando data  12.json ...\n",
-      "Cargando data  13.json ...\n",
-      "Cargando data  14.json ...\n",
-      "Cargando data  15.json ...\n",
-      "Cargando data  16.json ...\n",
-      "Cargando data  17.json ...\n",
-      "Cargando data  18.json ...\n",
-      "Cargando data  2.json ...\n",
-      "Cargando data  3.json ...\n",
-      "Cargando data  4.json ...\n",
-      "Cargando data  5.json ...\n",
-      "Cargando data  6.json ...\n",
-      "Cargando data  7.json ...\n",
-      "Cargando data  8.json ...\n",
-      "Cargando data  9.json ...\n"
+      "finalizo cargan de datos\n"
      ]
     }
    ],
@@ -97,15 +80,136 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df_New_York' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdf_New_York\u001b[49m\u001b[38;5;241m.\u001b[39mhead()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df_New_York' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>time</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>text</th>\n",
+       "      <th>pics</th>\n",
+       "      <th>resp</th>\n",
+       "      <th>gmap_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.137221e+20</td>\n",
+       "      <td>Alvin Martinez</td>\n",
+       "      <td>1603494795361</td>\n",
+       "      <td>5</td>\n",
+       "      <td>I'm late to posting this but this store especi...</td>\n",
+       "      <td>[{'url': ['https://lh5.googleusercontent.com/p...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0x89c25fc9494dce47:0x6d63c807b59a55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.072934e+20</td>\n",
+       "      <td>Johnnie Jackson</td>\n",
+       "      <td>1620157037403</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Very dissatisfied I did not get my phone the p...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>{'time': 1620268360920, 'text': 'We pride ours...</td>\n",
+       "      <td>0x89c25fc9494dce47:0x6d63c807b59a55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.003786e+20</td>\n",
+       "      <td>Manie Blazer</td>\n",
+       "      <td>1597431662039</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Excellent very well done with professional car...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0x89c25fc9494dce47:0x6d63c807b59a55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.149982e+20</td>\n",
+       "      <td>Fashion Fiinds</td>\n",
+       "      <td>1543773862044</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Basing my review strictly on the service I rec...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>{'time': 1543855317372, 'text': 'Thanks for th...</td>\n",
+       "      <td>0x89c25fc9494dce47:0x6d63c807b59a55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.171782e+20</td>\n",
+       "      <td>Andres Rieloff</td>\n",
+       "      <td>1597279097718</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Bad! Disorganized. I'm being totally honest. I...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0x89c25fc9494dce47:0x6d63c807b59a55</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        user_id             name           time  rating  \\\n",
+       "0  1.137221e+20   Alvin Martinez  1603494795361       5   \n",
+       "1  1.072934e+20  Johnnie Jackson  1620157037403       1   \n",
+       "2  1.003786e+20     Manie Blazer  1597431662039       5   \n",
+       "3  1.149982e+20   Fashion Fiinds  1543773862044       5   \n",
+       "4  1.171782e+20   Andres Rieloff  1597279097718       1   \n",
+       "\n",
+       "                                                text  \\\n",
+       "0  I'm late to posting this but this store especi...   \n",
+       "1  Very dissatisfied I did not get my phone the p...   \n",
+       "2  Excellent very well done with professional car...   \n",
+       "3  Basing my review strictly on the service I rec...   \n",
+       "4  Bad! Disorganized. I'm being totally honest. I...   \n",
+       "\n",
+       "                                                pics  \\\n",
+       "0  [{'url': ['https://lh5.googleusercontent.com/p...   \n",
+       "1                                               None   \n",
+       "2                                               None   \n",
+       "3                                               None   \n",
+       "4                                               None   \n",
+       "\n",
+       "                                                resp  \\\n",
+       "0                                               None   \n",
+       "1  {'time': 1620268360920, 'text': 'We pride ours...   \n",
+       "2                                               None   \n",
+       "3  {'time': 1543855317372, 'text': 'Thanks for th...   \n",
+       "4                                               None   \n",
+       "\n",
+       "                               gmap_id  \n",
+       "0  0x89c25fc9494dce47:0x6d63c807b59a55  \n",
+       "1  0x89c25fc9494dce47:0x6d63c807b59a55  \n",
+       "2  0x89c25fc9494dce47:0x6d63c807b59a55  \n",
+       "3  0x89c25fc9494dce47:0x6d63c807b59a55  \n",
+       "4  0x89c25fc9494dce47:0x6d63c807b59a55  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
